# devils-advocate

./: .gitignore  README.md  RELEASING.md  e2e-test-audit-plan.md  install.sh  pyproject.toml  run-tests  test-coverage-gap-analysis.md
.github/workflows/: publish-testpypi.yml  publish.yml
docs/: config-page-iconography.md  e2e-test-plan.md  enterprise-deployment.md  plan-p1-critical.md  plan-p2-minor.md  testpypi-install.md
docs/specs/: devils-advocate-spec.md
examples/: models.yaml.example
scripts/: probe_openai_models.py
src/devils_advocate/: __init__.py  __main__.py  cli.py  config.py  cost.py  dedup.py  governance.py  http.py  ids.py  normalization.py  orchestrator.py  output.py  parser.py  prompts.py  providers.py  revision.py  service.py  storage.py  types.py  ui.py
src/devils_advocate/examples/: .env.example  models.yaml.example
src/devils_advocate/gui/: __init__.py  _helpers.py  api.py  app.py  pages.py  progress.py  runner.py
src/devils_advocate/gui/static/: app.js  style.css
src/devils_advocate/gui/templates/: base.html  config.html  dashboard.html  new_review.html  review_detail.html
src/devils_advocate/orchestrator/: __init__.py  _common.py  _display.py  _formatting.py  _pipeline.py  code.py  integration.py  plan.py  spec.py
src/devils_advocate/templates/: code-output-final-instruct.txt  code-output-instruct.txt  code-revised-followup-instruct.txt  dedup-instruct.txt  governance-rules-final.txt  governance-rules.txt  integration-output-instruct.txt  integration-reviewer-instruct.txt  normalization-instruct.txt  plan-output-final-instruct.txt  plan-output-instruct.txt  plan-revised-followup-instruct.txt  reviewer-system.txt  revision-code-instruct.txt  revision-integration-instruct.txt  revision-plan-instruct.txt  round1-author-code-instruct.txt  round1-author-plan-instruct.txt  round1-reviewer-instruct.txt  round2-author-final-code-instruct.txt  round2-author-final-plan-instruct.txt  round2-reviewer-rebuttal-instruct.txt  spec-dedup-instruct.txt  spec-reviewer-instruct.txt  spec-reviewer-system.txt  spec-revision-instruct.txt
tests/: conftest.py  conftest_paranoid_unit.py  helpers.py  paranoid_unit_helpers.py  test_api_config_mutations.py  test_api_env_helpers.py  test_audit_gaps.py  test_cli.py  test_code_review.py  test_common.py  test_config.py  test_config_validation.py  test_cost.py  test_cost_tracker_comprehensive.py  test_dedup.py  test_e2e_live.py  test_formatting.py  test_governance.py  test_gui_api.py  test_gui_env.py  test_gui_pages.py  test_gui_progress.py  test_gui_routes.py  test_gui_runner.py  test_ids.py  test_ids_output_normalization.py  test_init_config.py  test_integration_review.py  test_normalization.py  test_orchestrator.py  test_orchestrator_modes.py  test_orchestrator_preflight.py  test_output.py  test_paranoid_adversarial.py  test_paranoid_unit_fuzzing.py  test_paranoid_unit_inventory.py  test_paranoid_unit_loss_annotations.py  test_paranoid_unit_snapshots.py  test_parser.py  test_parser_dedup.py  (+10 more)
tests/e2e/: .gitignore  PARANOID-FINDINGS.md  conftest.py  paranoid_helpers.py  test_config_page.py  test_dashboard.py  test_escalation_overrides.py  test_matrix.py  test_matrix_midrange.py  test_max_out_enforcement.py  test_paranoid_fuzzing.py  test_paranoid_inventory.py  test_paranoid_loss_annotations.py  test_paranoid_snapshots.py  test_review_detail.py  test_review_flow.py  test_visual_regression.py
tests/e2e/fixtures/: models.yaml  test-code.py  test-plan-2.md  test-plan.md  test-reference.md  test-spec.md
tests/e2e/fixtures/captured_review/: dvad-report.md  input_files_manifest.json  original_content.txt  (+2 more)
tests/fixtures/: boardfoot.sample.spec.txt
tests/fixtures/boardfoot-codebase/: .gitignore  settings.gradle.kts
(+18 files in other folders)
