[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devils-advocate"
version = "0.1.0"
description = "Cost-aware multi-LLM adversarial review engine with deterministic governance"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [{name = "Brian Kelley"}]
keywords = ["llm", "code-review", "governance", "adversarial", "consensus"]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich[markdown]>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
dvad = "devils_advocate.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/devils_advocate"]
include = ["src/devils_advocate/templates/*.txt"]
